# auto-server-detection

./: .gitignore  Cargo.toml
src/: error.rs  health.rs  logger.rs  main.rs  manager.rs  register.rs  scanner.rs  webserver.rs
windows/: make-installer.ps1
