[package]
name = "auto-server-detection"
version = "0.1.0"
edition = "2024"

[dependencies]
async-curl = "0.4.7"
curl-http-client = "2.4.0"
futures = "0.3"
http = "1.3.1"
local-ip-address = "0.6.5"
thiserror = "2.0.17"
tokio = { version = "1", features = ["rt-multi-thread", "net", "io-util", "sync", "macros", "signal", "time"] }
url = "2.5.7"
