[package]
name = "auto-server-detection"
version = "0.1.0"
edition = "2024"

[dependencies]
async-curl = "0.4"
curl-http-client = "2.4"
futures = "0.3"
http = "1.3"
if-addrs = "0.14"
local-ip-address = "0.6"
serde_json = "1.0"
thiserror = "2.0"
tokio = { version = "1", features = ["rt-multi-thread", "net", "io-util", "sync", "macros", "signal", "time"] }
url = "2.5"
