[package]
name = "auto-server-detection"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
async-curl = "0.4"
axum = { version = "0.8", features = ["macros"] }
chrono = "0.4.42"
curl-http-client = "2.4"
fern = "0.7.1"
futures = "0.3"
http = "1.3"
if-addrs = "0.14"
local-ip-address = "0.6"
log = "0.4.28"
serde = "1.0.228"
serde_json = "1.0"
thiserror = "2.0"
tokio = { version = "1", features = ["rt-multi-thread", "net", "io-util", "sync", "macros", "signal", "time"] }
url = "2.5"
